# god-eye

./: .env.example  .gitignore  DATA-ATTRIBUTION.md  PROGRESS.md  PROJECT-JOURNAL.md  README.md  THIRD_PARTY_NOTICES.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
api/: Dockerfile  package.json  tsconfig.json
api/src/: polls.ts  server.ts
api/src/agent/: bus.ts  watch-officer.ts  watches.ts
api/src/ai/: briefs.ts  gateway.ts
api/src/analysis/: correlation.ts  country-instability.ts
api/src/cache/: poll-loop.ts  redis.ts
api/src/mcp/: index.ts  tools.ts
api/src/relay/: ws.ts
api/src/routes/: ai.ts  analysis.ts  egypt.ts  layers.ts  news.ts
api/src/sources/: aircraft.ts  conflicts.ts  curated.ts  earthquakes.ts  eonet.ts  fires.ts  markets.ts  satellites.ts  vessels.ts  volcanoes.ts  weather.ts
osint/: Dockerfile  pyproject.toml
osint/app/: cctv.py  entity.py  imagery.py  intel.py  main.py  radio.py  recon.py  sar.py
scripts/: fetch-textures.sh
web/: Dockerfile  index.html  nginx.conf  package.json  tsconfig.json  vite.config.ts
web/src/: main.ts
web/src/bus/: agent-client.ts  data-bus.ts  ws-client.ts
web/src/cesium/: CesiumView.ts
web/src/globe/: GlobeView.ts  globe-ext.d.ts  solar.ts
web/src/hud/: App.ts  ai-intel.ts  cctv-panel.ts  command-palette.ts  dossier.ts  entity-panel.ts  health-panel.ts  intel-panel.ts  markets-panel.ts  plugin-panel.ts  presets.ts  radio-panel.ts  recon-panel.ts  sar-panel.ts  shortcuts-overlay.ts  time-machine.ts  watch-officer.ts
web/src/layers/: globe-renderer.ts  registry.ts  (+1 more)
(+8 files in other folders)
