[project]
name = "god-eye-osint"
version = "0.1.0"
description = "GOD-EYE OSINT service (FastAPI)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.1.0",
    "redis>=5.3.0",
]

[tool.ruff]
line-length = 100
